--- a/public/index.html
+++ b/public/index.html
@@ -36,6 +36,7 @@
 </head>
 
 <body>
+    <h1>Choose a chick</h1>
     <div id="videos" class="container">
         <video id="localVideo" class="vid" autoplay muted></video>
     </div>
